--- a/src/components/component-one.html
+++ b/src/components/component-one.html
@@ -1,3 +1,7 @@
 <div>
-  <h4 class="red">Component 1</h4>
+  <h4 class="red">Component 1 - This should be read from a global style</h4>
+
+  <p class="local-style">
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio provident nobis cum exercitationem, alias animi, debitis tenetur facere reiciendis sit aut harum. Atque sed dignissimos harum eos cumque, alias dicta.
+  </p>
 </div>
