--- a/src/components/component-two.html
+++ b/src/components/component-two.html
@@ -1,3 +1,8 @@
 <div>
-  <h4 class="blue">Component 2</h4>
+  <h4 class="blue">Component 2 - This should be read from a global style</h4>
+
+  <p class="local-style">
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio provident nobis cum exercitationem, alias animi, debitis tenetur facere reiciendis sit aut harum. Atque sed dignissimos harum eos cumque, alias dicta.
+  </p>
+
 </div>
